add portfolio.html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head><!--Information you cannot see-->
     <title>
-
+        CODING FOR THE CULTURE
     </title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -41,13 +41,13 @@
                         <h3>Interests</h3>
                         <ul>
                             <li>
-
+                                Creating Art & Visiting Creative Spaces
                             </li>
                             <li>
-
+                                Visiting Local Restaurants & Eateries
                             </li>
                             <li>
-
+                                Gaining New Skills & Experiences
                             </li>
                         </ul>
                     </div>
